# VolatilityEngine

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py  volatility.db
app/core/: config.py  database.py  security.py
app/data/: data_load.ipynb  historical_data_analysis.ipynb  load_historical_data.py
app/dependencies/: auth.py
app/ml/: data_processing_test.ipynb  model.py  predict.py  preprocessing.py  preprocessing_test.ipynb  test.py  training.py  training_test.ipynb
app/models/: ticker.py  user.py
app/routers/: auth.py  news.py  stocks.py  volatility.py
app/schema/: auth_models.py  models.py  volatility_models.py
app/services/: auth_service.py  finbert_analysis.py  news.py  stock_prices.py
app/utils/: seed.py
volatility-engine-frontend/: package-lock.json  package.json
volatility-engine-frontend/app/: layout.tsx  page.tsx
volatility-engine-frontend/app/(auth)/: layout.tsx
volatility-engine-frontend/app/api-hooks/: auth.ts  authentication.ts  dashboard.ts  mockData.ts  news.ts  stocks.ts  volatility.ts
volatility-engine-frontend/app/components/: ConditionalLayout.tsx  LayoutShell.tsx  Navbar.tsx  Sidebar.tsx  SidebarItem.tsx  Topbar.tsx
volatility-engine-frontend/app/context/: authContext.tsx
volatility-engine-frontend/app/dashboard/: page.tsx
volatility-engine-frontend/app/hooks/: useAuthApi.ts
volatility-engine-frontend/app/login/: page.tsx
volatility-engine-frontend/app/profile/: page.tsx
volatility-engine-frontend/app/signup/: page.tsx
volatility-engine-frontend/app/types/: dashboard.ts
(+11 files in other folders)
